src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Active_In__c</fullName>
        <label>Active/Inactive</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Response__c</fullName>
        <formula>CASE( Number_Sent__c , 0, Number_Sent__c , NumberOfResponses / Number_Sent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Response (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Solution/Brand Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership / Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>The target language the campaign will be using.</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple Chinese</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Media_Source_File__c</fullName>
        <label>Media Source File</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Sent__c</fullName>
        <label>Number Sent</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Sent</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <picklist>
            <picklistValues>
                <fullName>AGA Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHRAE Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRWA Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Grid International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superintendent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Automation T&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water &amp; Wastes Digest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WaterWorld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWWA Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The NEWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalSpec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmeceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greening Our Blue Borders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Operating Management  (BOM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Infra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Water World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation and Green Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Engineering Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Bounce_Rate__c</fullName>
        <description>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Bounce_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Click_Rate__c</fullName>
        <description>Average click rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Click_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average click rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Open_Rate__c</fullName>
        <description>Average open rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Open_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average open rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Unsubscribe_Rate__c</fullName>
        <description>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Unsubscribe_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.08</defaultValue>
        <description>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Last_Update_Statistics_Date__c</fullName>
        <description>The date/time of the last Update on the Campaign record.</description>
        <inlineHelpText>The date/time of the last Update on the Campaign record.</inlineHelpText>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Message_Statistic_Count__c</fullName>
        <description>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</description>
        <inlineHelpText>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</inlineHelpText>
        <label>Message Statistic Count</label>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date1__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Targeted Join Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date2__c</fullName>
        <defaultValue>today() + 1</defaultValue>
        <label>Targeted Join Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Bounce_Rate__c</fullName>
        <description>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</description>
        <inlineHelpText>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</inlineHelpText>
        <label>Total Bounce Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Bounce_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Click_Rate__c</fullName>
        <description>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</description>
        <inlineHelpText>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</inlineHelpText>
        <label>Total Click Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Click_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Open_Rate__c</fullName>
        <description>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</description>
        <inlineHelpText>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</inlineHelpText>
        <label>Total Open Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Open_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Unsubscribe_Rate__c</fullName>
        <description>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</description>
        <inlineHelpText>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</inlineHelpText>
        <label>Total Unsubscribe Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Unsubscribe_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.001</defaultValue>
        <description>The first warning threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>AMOUNT_ALL</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Standard_Salesforce_Campaign</fullName>
        <active>true</active>
        <label>Standard Salesforce Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>iContact_Email_Campaign</fullName>
        <active>true</active>
        <label>iContact Email Campaign</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>